2008-11-13  John Carr  <john.carr@unrouted.co.uk>

	* jhbuild/versioncontrol/svn.py:
	Replace trunk-path and friends with *-template to support more
	common repository layouts.

2008-11-11  Luca Ferretti  <elle.uca@libero.it>

	* modulesets/gnome-2.26.modules: added "empathy-webkit" from 
	Xavier Claessens' git repository - we hope it will land on
	svn.gnome.org soon: it works ;)

2008-11-11  Frederic Peters  <fpeters@0d.be>

	* jhbuild/utils/httpcache.py: respect XDG_CACHE_HOME for cached
	modulesets.  (closes: #560092, patch by James Sharpe)

2008-11-11  Christian Persch  <chpe@gnome.org>

	* modulesets/gnome-2.22.modules:
	* modulesets/gnome-2.24.modules:
	* modulesets/gnome-2.26.modules: Use new gst-plugins-gl location. Bug
	#560322.

2008-11-10  Zeeshan Ali (Khattak)  <zeeshanak@gnome.org>

	* modulesets/gnome-2.26.modules: Add Rygel to 2.26 moduleset.

2008-11-10  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-2.26.modules, modulesets/gnome-suites-2.26.modules:
	invert tracker/deskbar-applet relationship; it is tracker that should
	be built after deskbar-applet, not the reverse.

2008-11-10  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-suites-2.26.modules: hint deskbar-applet to build
	after tracker. (closes: #560127)

2008-11-10  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-external-deps-2.26.modules: pass --disable-tcl to
	sqlite configure script; as this extension doesn't respect $prefix.
	(closes: #560093)

2008-11-10  Frederic Peters  <fpeters@0d.be>

	* tests/hello/Makefile.am, tests/hello/autogen.sh,
	tests/hello/configure.in, tests/hello/hello-frontend.c,
	tests/libhello/Makefile.am, tests/libhello/autogen.sh,
	tests/libhello/configure.in, tests/libhello/libhello.c,
	tests/libhello/libhello.h, tests/libhello/libhello.pc.in,
	tests/tests.py: added test case covering libtool; thanks to Mark
	Seaborn (closes: #559428)

2008-11-10  Frederic Peters  <fpeters@0d.be>
