@@ -189,7 +189,7 @@
     </dependencies>
   </autotools>
   <autotools id="atk">
-    <branch module="atk/tags/gnome-2-16"/>
+    <branch tag="gnome-2-16" />
     <dependencies>
       <dep package="glib"/>
     </dependencies>
@@ -204,7 +204,7 @@
     </dependencies>
   </autotools>
   <autotools id="gail">
-    <branch module="gail/tags/gnome-2-16"/>
+    <branch tag="gnome-2-16"/>
     <dependencies>
       <dep package="gtk+"/>
       <dep package="atk"/>
