@@ -378,7 +378,7 @@
     </dependencies>
   </autotools>
   <autotools id="libgnomecanvas">
-    <branch module="libgnomecanvas/tags/LIBGNOMECANVAS_2_14_1/"/>
+    <branch tag="LIBGNOMECANVAS_2_14_1"/>
     <dependencies>
       <dep package="gtk+"/>
       <dep package="libart_lgpl"/>
