@@ -56,11 +56,11 @@ password=""/>
   </autotools>
 
   <autotools id="openobex">
-    <branch repo="maemo.org-connectivity" module="openobex/tags/openobex-1.3osso1" checkoutdir="openobex-1.3osso1" />
+    <branch repo="maemo.org-connectivity" tag="openobex-1.3osso1" checkoutdir="openobex-1.3osso1" />
   </autotools>
 
   <autotools id="bluez-libs"> <!-- The .pc file is just called bluez. murrayc -->
-    <branch repo="maemo.org-connectivity" module="bluez-libs/tags/bluez-libs-3.7" checkoutdir="bluez-libs-3.7" />
+    <branch repo="maemo.org-connectivity" tag="bluez-libs-3.7" checkoutdir="bluez-libs-3.7" />
     <dependencies>
       <dep package="openobex" />
     </dependencies>
