@@ -1,6 +1,16 @@
 2008-11-13  John Carr  <john.carr@unrouted.co.uk>
 
 	* jhbuild/versioncontrol/svn.py:
+	Implement support for tagged version in svn repositories
+
+	* modulesets/gnome-2.16.modules:
+	* modulesets/gnome-2.18.modules:
+	* modulesets/hildon.modules:
+	Take advantage of tag support
+
+2008-11-13  John Carr  <john.carr@unrouted.co.uk>
+
+	* jhbuild/versioncontrol/svn.py:
 	Replace trunk-path and friends with *-template to support more
 	common repository layouts.
 
